# airbyte

./: .gitignore  WORKSPACE.bazel
.ijwb/: .bazelproject
airbyte-analytics/: build.gradle
airbyte-commons/: BUILD.bazel
airbyte-commons/src/main/java/io/airbyte/commons/json/: Jsons.java
airbyte-config/init/: BUILD.bazel
airbyte-config/models/: BUILD.bazel
airbyte-integrations/bases/base-java/src/main/java/io/airbyte/integrations/destination/buffered_stream_consumer/: BufferedStreamConsumer.java
airbyte-json-validation/: BUILD.bazel
airbyte-scheduler/src/main/java/io/airbyte/scheduler/temporal/: SpecWorkflow.java
bazel/bundles/: BUILD.bazel
bazel/bundles/jackson/: BUILD.bazel
bazel/bundles/jsonschema/: BUILD.bazel
bazel/bundles/logging/: BUILD.bazel
bazel/rules/: jsonschema.bzl
bazel/rules/jsonschema/: defs.bzl
