load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "3.3"
RULES_JVM_EXTERNAL_SHA = "d85951a92c0908c80bd8551002d66cb23c3434409c814179c0ff026b53544dab"

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "com.google.guava:guava:29.0-jre",
        "com.fasterxml.jackson:jackson-bom:2.10.4",
        "com.fasterxml.jackson.core:jackson-core:2.10.4",
        "com.fasterxml.jackson.core:jackson-databind:2.10.4",
        "com.fasterxml.jackson.core:jackson-annotations:2.10.4",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.4",
        "org.apache.commons:commons-lang3:3.11",

        "org.slf4j:slf4j-api:1.7.30",
        "org.apache.logging.log4j:log4j-api:2.11.0",
        "org.apache.logging.log4j:log4j-core:2.11.0",
        "org.apache.logging.log4j:log4j-slf4j-impl:2.11.0",
        "commons-io:commons-io:2.7",
        "org.slf4j:jul-to-slf4j:1.7.30",
        "org.slf4j:jcl-over-slf4j:1.7.30",
        "org.slf4j:log4j-over-slf4j:1.7.30",
    ],
    repositories = [
        "https://jcenter.bintray.com/",
        "https://repo1.maven.org/maven2",
    ],
)
