load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

#
# bazel_skylib
#
http_archive(
    name = "bazel_skylib",
    urls = [
        "https://github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
        "https://mirror.bazel.build/github.com/bazelbuild/bazel-skylib/releases/download/1.0.3/bazel-skylib-1.0.3.tar.gz",
    ],
    sha256 = "1c531376ac7e5a180e0237938a2536de0c54d93f5c278634818e0efc952dd56c",
)
load("@bazel_skylib//:workspace.bzl", "bazel_skylib_workspace")
bazel_skylib_workspace()

#
# jsonschema2pojo
#
load("//bazel/rules:jsonschema.bzl", "jsonschema2pojo_repositories")
jsonschema2pojo_repositories()

#
# rules_jvm_external
#
RULES_JVM_EXTERNAL_TAG = "3.3"
RULES_JVM_EXTERNAL_SHA = "d85951a92c0908c80bd8551002d66cb23c3434409c814179c0ff026b53544dab"

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "com.google.guava:guava:29.0-jre",
        "com.fasterxml.jackson:jackson-bom:2.10.4",
        "com.fasterxml.jackson.core:jackson-core:2.10.4",
        "com.fasterxml.jackson.core:jackson-databind:2.10.4",
        "com.fasterxml.jackson.core:jackson-annotations:2.10.4",
        "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.4",
        "com.networknt:json-schema-validator:1.0.42",
        "com.segment.analytics.java:analytics:2.1.1",
        "commons-io:commons-io:2.7",
        "me.andrz.jackson:jackson-json-reference-core:0.3.2",
        "org.apache.commons:commons-lang3:3.11",
        "org.slf4j:slf4j-api:1.7.30",
        "org.apache.logging.log4j:log4j-api:2.11.0",
        "org.apache.logging.log4j:log4j-core:2.11.0",
        "org.apache.logging.log4j:log4j-slf4j-impl:2.11.0",
        "org.slf4j:jul-to-slf4j:1.7.30",
        "org.slf4j:jcl-over-slf4j:1.7.30",
        "org.slf4j:log4j-over-slf4j:1.7.30",
    ],
    repositories = [
        "https://jcenter.bintray.com/",
        "https://repo1.maven.org/maven2",
    ],
)

