java_library(
    name = "airbyte-commons",
    srcs = glob(["src/main/java/**/*.java"]),
    deps = [
        "@maven//:com_google_guava_guava",
        "@maven//:org_apache_commons_commons_lang3",
        "@maven//:commons_io_commons_io",
        "//bazel/bundles/logging:logging",
        "//bazel/bundles/jackson:jackson",
    ],
    visibility = ["//visibility:public"],
)
