java_library(
    name = "jackson",
    exports = [
        "@maven//:com_fasterxml_jackson_core_jackson_core",
        "@maven//:com_fasterxml_jackson_core_jackson_databind",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:com_fasterxml_jackson_dataformat_jackson_dataformat_yaml",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "jsonschema",
    exports = [
        "@maven//:com_networknt_json_schema_validator",
        "@maven//:me_andrz_jackson_jackson_json_reference_core",
    ],
    visibility = ["//visibility:public"],
)

java_library(
    name = "logging",
    exports = [
        "@maven//:org_slf4j_slf4j_api",
        # SLF4J as a facade over Log4j2 required dependencies
        "@maven//:org_apache_logging_log4j_log4j_api",
        "@maven//:org_apache_logging_log4j_log4j_core",
        "@maven//:org_apache_logging_log4j_log4j_slf4j_impl",
        # Bridges from other logging implementations to SLF4J
        "@maven//:org_slf4j_jul_to_slf4j", # JUL bridge
        "@maven//:org_slf4j_jcl_over_slf4j", # JCL bridge
        "@maven//:org_slf4j_log4j_over_slf4j", # log4j1.2 bridge
    ],
    visibility = ["//visibility:public"],
)
